--- a/index.html
+++ b/index.html
@@ -238,32 +238,34 @@ footer{
 <!-- ABOUT -->
 <section class="about-wrap">
   <div class="container">
+    <h2 class="section-title">About letsveereal</h2>
+
     <div class="about-card">
-  <p>Hello, I’m <strong>Viriel (“Yel”)</strong>, the photographer behind <strong>letsveereal photography</strong>.</p>
+      <p>Hello, I’m <strong>Viriel (“Yel”)</strong>, the photographer behind <strong>letsveereal photography</strong>.</p>
 
-  <p>
-    The name <em>letsveereal</em> is inspired by my own name, Viriel, and reflects my approach to photography—capturing honest moments,
-    natural light, and images that feel genuine. My work focuses on authentic expressions and clean, timeless visuals that tell your story
-    in a meaningful way.
-  </p>
+      <p>
+        The name <em>letsveereal</em> is inspired by my own name, Viriel, and reflects my approach to photography—capturing honest moments,
+        natural light, and images that feel genuine. My work focuses on authentic expressions and clean, timeless visuals that tell your story
+        in a meaningful way.
+      </p>
 
-  <p>
-    I shoot with an <strong>Olympus OM-D E-M10 Mark IV</strong> paired with carefully selected lenses, and every image is professionally
-    edited using <strong>Adobe Lightroom</strong> to ensure consistent color, clarity, and quality. I also offer
-    <strong>same-day instant photo prints</strong>, allowing clients to leave their session with a physical memory the very same day.
-  </p>
+      <p>
+        I shoot with an <strong>Olympus OM-D E-M10 Mark IV</strong> paired with carefully selected lenses, and every image is professionally
+        edited using <strong>Adobe Lightroom</strong> to ensure consistent color, clarity, and quality. I also offer
+        <strong>same-day instant photo prints</strong>, allowing clients to leave their session with a physical memory the very same day.
+      </p>
 
-  <p>
-    I provide <strong>mini sessions and custom shoots</strong> with flexible locations tailored to your needs. For clients who can assist
-    with <strong>transportation</strong> to their preferred location, a <strong>20% discount</strong> is available—helping keep professional
-    photography accessible while maintaining high-quality results.
-  </p>
+      <p>
+        I provide <strong>mini sessions and custom shoots</strong> with flexible locations tailored to your needs. For clients who can assist
+        with <strong>transportation</strong> to their preferred location, a <strong>20% discount</strong> is available—helping keep professional
+        photography accessible while maintaining high-quality results.
+      </p>
 
-  <p style="margin-top:18px; font-weight:600;">
-    If you’re looking for photography that feels natural, personal, and true to you—<br>
-    <strong>let’s veereal.</strong>
-  </p>
-</div>
+      <p style="margin-top:18px; font-weight:600;">
+        If you’re looking for photography that feels natural, personal, and true to you—<br>
+        <strong>let’s veereal.</strong>
+      </p>
+    </div>
   </div>
 </section>
 
