--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ footer{
     </p>
 
     <div class="hero-actions">
-      <button class="btn" onclick="textToBook()">Text 302-260-1994 to book</button>
+      <button class="btn" onclick="textToBook()">Text to book</button>
       <button class="btn secondary" onclick="scrollToProof()">View work</button>
     </div>
 
