--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@ footer{
 </style>
 </head>
 
+<audio id="bgMusic" loop>
+  <source src="assets/audio/background.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+  
 <body>
 
 <header>
