Add additional proof images to index.html

--- a/index.html
+++ b/index.html
@@ -286,6 +286,12 @@ footer{
         <img src="assets/img/proof-08.jpg">
         <img src="assets/img/proof-09.jpg">
         <img src="assets/img/proof-10.jpg">
+        <img src="assets/img/proof-11.jpg">
+        <img src="assets/img/proof-12.jpg">
+        <img src="assets/img/proof-13.jpg">
+        <img src="assets/img/proof-14.jpg">
+        <img src="assets/img/proof-15.jpg">
+        <img src="assets/img/proof-16.jpg">
       </div>
     </div>
 
