--- a/index.html
+++ b/index.html
@@ -292,6 +292,10 @@ footer{
         <img src="assets/img/proof-14.jpg">
         <img src="assets/img/proof-15.jpg">
         <img src="assets/img/proof-16.jpg">
+        <img src="assets/img/proof-17.jpg">
+        <img src="assets/img/proof-18.jpg">
+        <img src="assets/img/proof-19.jpg">
+        <img src="assets/img/proof-20.jpg">
       </div>
     </div>
 
