--- a/index.html
+++ b/index.html
@@ -203,10 +203,18 @@ footer{
 }
 </style>
 </head>
+
+<audio id="bgMusic" loop playsinline>
+  <source src="assets/audio/background.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
   
 <body>
 
 <header>
+  <button class="btn secondary" id="musicBtn" onclick="toggleMusic()">
+  ▶ Play music
+</button>
   <div class="container nav">
     <div class="brand">letsveereal</div>
     <button class="btn" onclick="textToBook()">Text to book</button>
