--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ section{padding:80px 0}
 .about-bg{
   padding:34px 26px;
   background:
-    linear-gradient(180deg, rgba(0,0,0,.70), rgba(0,0,0,.45), rgba(0,0,0,.75)),
-    url("assets/img/bg-image.jpg") center/contain no-repeat;
+  linear-gradient(180deg, rgba(0,0,0,.70), rgba(0,0,0,.45), rgba(0,0,0,.75)),
+  url("assets/img/bg-image.jpg") center / cover no-repeat;
   background-color:#000; /* fills any empty space from contain */
 }
 
