Update button text for booking action

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ footer{
     </div>
 
     <div class="hero-actions">
-      <button class="btn" onclick="textToBook()">Text 302-260-1994 to book</button>
+      <button class="btn" onclick="textToBook()">Text to book</button>
       <button class="btn secondary" onclick="scrollToProof()">View work</button>
     </div>
 
