--- a/index.html
+++ b/index.html
@@ -15,36 +15,44 @@
   --border:rgba(255,255,255,.14);
   --radius:18px;
   --shadow:0 20px 60px rgba(0,0,0,.55);
-
-  --accent: rgba(255,255,255,.92);
-  --accent2: rgba(255,255,255,.78);
 }
 *{box-sizing:border-box}
-html,body{height:100%}
+html,body{margin:0}
 body{
-  margin:0;
   background:var(--bg);
   color:var(--text);
   font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;
 }
 .container{max-width:1200px;margin:0 auto;padding:0 22px}
 
-/* NAV */
+/* HEADER */
 header{
-  position:fixed;top:0;left:0;right:0;
-  padding:18px 0;
+  position:sticky;
+  top:0;
   z-index:50;
-  background:linear-gradient(to bottom,rgba(0,0,0,.6),transparent);
+  backdrop-filter:blur(10px);
+  background:rgba(0,0,0,.55);
+  border-bottom:1px solid rgba(255,255,255,.12);
 }
-.nav{display:flex;justify-content:space-between;align-items:center;gap:12px}
+.nav{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:18px 0;
+}
 .brand{
   font-family:"Playfair Display",serif;
   font-size:20px;
   text-transform:lowercase;
-  letter-spacing:.3px;
 }
-.nav-actions{display:flex; gap:10px; align-items:center; flex-wrap:wrap}
+.nav-actions{
+  display:flex;
+  gap:10px;
+  align-items:center;
+  flex-wrap:nowrap;
+}
 
+/* BUTTONS */
 .btn{
   border-radius:999px;
   border:1px solid var(--border);
@@ -58,11 +66,14 @@ header{
   background:transparent;
   color:#fff;
 }
+#musicBtn{
+  width:150px;       /* prevents shifting */
+  text-align:center;
+}
 
 /* HERO */
 .hero{
   height:100vh;
-  width:100%;
   position:relative;
   overflow:hidden;
 }
@@ -71,40 +82,37 @@ header{
   position:absolute;
   inset:0;
   background:
-    linear-gradient(180deg, rgba(0,0,0,.58), rgba(0,0,0,.22), rgba(0,0,0,.78)),
-    url("assets/img/hero.jpg") top center / cover no-repeat;
+    linear-gradient(180deg,rgba(0,0,0,.6),rgba(0,0,0,.25),rgba(0,0,0,.8)),
+    url("assets/img/hero.jpg") center / cover no-repeat;
 }
 .hero-content{
   position:relative;
   z-index:2;
-  padding-top:92px;
+  padding-top:90px;
 }
 .hero h1{
   font-family:"Playfair Display",serif;
   font-size:clamp(44px,6vw,72px);
   margin:0;
 }
-.hero p{color:var(--muted);max-width:600px;margin:10px 0 0}
+.hero p{color:var(--muted);max-width:600px}
 .hero-actions{margin-top:18px;display:flex;gap:12px;flex-wrap:wrap}
-.pill{
-  margin-top:16px;
-  display:inline-flex;
-  gap:12px;
-  padding:10px 14px;
-  border:1px solid var(--border);
-  border-radius:999px;
-  color:var(--muted);
-  font-weight:500;
-}
 .hero-price{
-  margin-top:12px;
+  margin-top:14px;
   padding:14px 16px;
   border:1px solid var(--border);
   border-radius:var(--radius);
   background:rgba(255,255,255,.04);
   max-width:520px;
 }
-.hero-price strong{color:var(--accent)}
+.pill{
+  margin-top:16px;
+  padding:10px 14px;
+  border:1px solid var(--border);
+  border-radius:999px;
+  color:var(--muted);
+  display:inline-block;
+}
 
 /* SECTIONS */
 section{padding:80px 0}
@@ -112,92 +120,48 @@ section{padding:80px 0}
   text-align:center;
   font-family:"Playfair Display",serif;
   font-size:30px;
-  margin:0 0 22px;
+  margin-bottom:22px;
 }
 
 /* ABOUT */
-.about-wrap{padding:80px 0}
-
-/* Card now supports a FIT (no crop) background image */
 .about-card{
   max-width:980px;
   margin:0 auto;
   border:1px solid var(--border);
   border-radius:var(--radius);
   overflow:hidden;
-  background:rgba(255,255,255,.03);
 }
-
-/* Background image layer (fit, no crop, no blur) */
 .about-bg{
-  padding:34px 26px;
+  padding:36px 28px;
   background:
-  linear-gradient(180deg, rgba(0,0,0,.70), rgba(0,0,0,.45), rgba(0,0,0,.75)),
-  url("assets/img/bg-image.jpg") center / cover no-repeat;
-  background-color:#000; /* fills any empty space from contain */
+    linear-gradient(180deg,rgba(0,0,0,.75),rgba(0,0,0,.4),rgba(0,0,0,.8)),
+    url("assets/img/bg-image.jpg") center / cover no-repeat;
 }
-
-.about-lede{
-  text-align:center;
-  margin:0 0 18px;
-  color:var(--accent2);
-  font-size:14px;
-  letter-spacing:.14em;
-  text-transform:uppercase;
-}
-
 .about-copy{
-  margin:0 auto;
   max-width:78ch;
-  color:rgba(255,255,255,.80);
-  font-size:15.5px;
-  line-height:1.85;
+  margin:0 auto;
   text-align:center;
+  line-height:1.85;
+  color:rgba(255,255,255,.82);
 }
-.about-copy p{margin:0}
 .about-copy p + p{margin-top:16px}
-
-/* Emphasis styling (no bubbles) */
+.about-copy strong{color:#fff}
 .about-copy em{
   font-family:"Playfair Display",serif;
   font-style:italic;
-  color:var(--accent);
-  letter-spacing:.2px;
-}
-.about-copy strong{
-  color:var(--accent);
-  font-weight:700;
-}
-.about-signoff{
-  margin-top:18px;
-  font-weight:700;
-  color:rgba(255,255,255,.92);
+  color:#fff;
 }
 
-/* LANDSCAPE SCROLL GALLERY */
-.gallery-wrap{position:relative;margin-top:10px}
-.gallery-wrap::after{
-  content:"";
-  position:absolute;
-  top:0;
-  right:0;
-  width:90px;
-  height:100%;
-  pointer-events:none;
-  background:linear-gradient(to right, transparent, var(--bg));
-}
+/* GALLERY */
+.gallery-wrap{position:relative}
 .gallery{
   display:flex;
   gap:16px;
   overflow-x:auto;
   padding-bottom:10px;
   scroll-snap-type:x mandatory;
-  -webkit-overflow-scrolling:touch;
 }
-.gallery::-webkit-scrollbar{height:8px}
-.gallery::-webkit-scrollbar-thumb{background:rgba(255,255,255,.35);border-radius:10px}
 .gallery img{
-  flex:0 0 auto;
   width:520px;
   height:320px;
   object-fit:cover;
@@ -206,28 +170,14 @@ section{padding:80px 0}
   scroll-snap-align:start;
 }
 
-/* TESTIMONIAL */
-blockquote{
-  margin:40px auto 0;
-  max-width:820px;
-  text-align:center;
-  color:var(--muted);
-}
-blockquote span{
-  display:block;
-  margin-top:10px;
-  font-size:13px;
-  opacity:.8;
-}
-
 /* FOOTER */
 footer{
   padding:40px 0 80px;
   border-top:1px solid var(--border);
+  text-align:center;
 }
-.footer{display:flex;justify-content:space-between;align-items:center}
 
-/* FLOATING TEXT BUTTON */
+/* FLOATING TEXT */
 .textus{
   position:fixed;
   bottom:18px;
@@ -243,14 +193,10 @@ footer{
 
 /* MOBILE */
 @media (max-width:700px){
-  .hero-content{padding-top:86px}
   .gallery img{
     width:82vw;
     height:52vw;
-    max-height:340px;
   }
-  .about-bg{padding:28px 18px}
-  .about-copy{font-size:15px}
 }
 </style>
 </head>
@@ -259,13 +205,11 @@ footer{
 
 <audio id="bgMusic" loop playsinline preload="auto">
   <source src="assets/audio/background.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
 </audio>
 
 <header>
   <div class="container nav">
     <div class="brand">letsveereal</div>
-
     <div class="nav-actions">
       <button class="btn secondary" id="musicBtn" onclick="toggleMusic()">▶ Play music</button>
       <button class="btn" onclick="textToBook()">Text to book</button>
@@ -273,23 +217,18 @@ footer{
   </div>
 </header>
 
-<!-- HERO -->
-<section class="hero" id="top">
+<section class="hero">
   <div class="container hero-content">
     <h1>Let’s be real.</h1>
     <p><strong>Natural moments, captured honestly.</strong></p>
 
     <div class="hero-price">
-      <div style="font-size:16px; font-weight:700;">
-        <strong>$50</strong> · <strong>30-minute session</strong>
-      </div>
-      <div style="margin-top:6px; color:var(--muted); font-size:14px;">
-        Includes <strong>10–20 edited photos</strong> · Same-day prints available
-      </div>
+      <strong>$50 · 30-minute session</strong><br>
+      Includes 10–20 edited photos · Same-day prints available
     </div>
 
     <div class="hero-actions">
-      <button class="btn" onclick="textToBook()">Text to book</button>
+      <button class="btn" onclick="textToBook()">Text 302-260-1994</button>
       <button class="btn secondary" onclick="scrollToProof()">View work</button>
     </div>
 
@@ -299,80 +238,54 @@ footer{
   </div>
 </section>
 
-<!-- ABOUT -->
-<section class="about-wrap" id="about">
+<section>
   <div class="container">
     <h2 class="section-title">Behind The Lens</h2>
-
     <div class="about-card">
       <div class="about-bg">
-        <div class="about-lede">letsveereal photography</div>
-
         <div class="about-copy">
+          <p>Hello, I’m <strong>Viriel (“Yel”)</strong>, the photographer behind <strong>letsveereal</strong>.</p>
           <p>
-            Hello, I’m <strong>Viriel (“Yel”)</strong>, the photographer behind <strong>letsveereal</strong>.
-          </p>
-
-          <p>
-            The name <em>letsveereal</em> is inspired by my own name, Viriel, and reflects my approach to photography—capturing
+            The name <em>letsveereal</em> reflects my approach to photography—capturing
             <strong>honest moments</strong>, <strong>natural light</strong>, and images that feel <strong>genuine</strong>.
-            My work focuses on <strong>authentic expressions</strong> and <em>clean, timeless visuals</em> that tell your story in a meaningful way.
           </p>
-
           <p>
-            I shoot with an <strong>Olympus OM-D E-M10 Mark IV</strong> paired with carefully selected lenses, and every image is
-            professionally edited using <strong>Adobe Lightroom</strong> to ensure consistent <strong>color</strong>, <strong>clarity</strong>,
-            and <strong>quality</strong>. I also offer <strong>same-day instant photo prints</strong>, allowing clients to leave their session
-            with a physical memory the very same day.
+            I shoot with an <strong>Olympus OM-D E-M10 Mark IV</strong> and professionally edit every photo in
+            <strong>Adobe Lightroom</strong>. Same-day instant prints are available.
           </p>
-
           <p>
-            I provide <strong>mini sessions</strong> and <strong>custom shoots</strong> with flexible locations tailored to your needs.
-            For clients who can assist with <strong>transportation</strong> to their preferred location, a <strong>20% discount</strong> is available—helping keep
-            professional photography accessible while maintaining high-quality results.
+            I offer <strong>mini sessions</strong> and <strong>custom shoots</strong>, with a <strong>20% discount</strong>
+            for clients who assist with transportation.
           </p>
-
-          <p class="about-signoff">
-            If you’re looking for photography that feels natural, personal, and true to you—<br>
-            <strong>let’s veereal.</strong>
-          </p>
+          <p><strong>Let’s veereal.</strong></p>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<!-- GALLERY -->
 <section id="proof">
   <div class="container">
     <h2 class="section-title">Latest Gallery</h2>
-
     <div class="gallery-wrap">
       <div class="gallery">
-        <img src="assets/img/proof-01.jpg" alt="Gallery photo 1">
-        <img src="assets/img/proof-02.jpg" alt="Gallery photo 2">
-        <img src="assets/img/proof-03.jpg" alt="Gallery photo 3">
-        <img src="assets/img/proof-04.jpg" alt="Gallery photo 4">
-        <img src="assets/img/proof-05.jpg" alt="Gallery photo 5">
-        <img src="assets/img/proof-06.jpg" alt="Gallery photo 6">
-        <img src="assets/img/proof-07.jpg" alt="Gallery photo 7">
-        <img src="assets/img/proof-08.jpg" alt="Gallery photo 8">
-        <img src="assets/img/proof-09.jpg" alt="Gallery photo 9">
-        <img src="assets/img/proof-10.jpg" alt="Gallery photo 10">
+        <img src="assets/img/proof-01.jpg">
+        <img src="assets/img/proof-02.jpg">
+        <img src="assets/img/proof-03.jpg">
+        <img src="assets/img/proof-04.jpg">
+        <img src="assets/img/proof-05.jpg">
+        <img src="assets/img/proof-06.jpg">
+        <img src="assets/img/proof-07.jpg">
+        <img src="assets/img/proof-08.jpg">
+        <img src="assets/img/proof-09.jpg">
+        <img src="assets/img/proof-10.jpg">
       </div>
     </div>
-
-    <blockquote>
-      “my bro REALLY did his thing for our Anniversary pics! These turned out so beautifully!!!”
-      <span>— Andrea Brown, Virginia</span>
-    </blockquote>
   </div>
 </section>
 
 <footer>
-  <div class="container footer">
-    <div class="brand">letsveereal</div>
-  </div>
+  <div class="brand">letsveereal</div>
 </footer>
 
 <div class="textus" onclick="textToBook()">Text me</div>
@@ -391,17 +304,13 @@ function scrollToProof(){
 function toggleMusic(){
   if(!isPlaying){
     music.volume = 0.3;
-    music.play().then(() => {
-      isPlaying = true;
-      musicBtn.textContent = "⏸ Pause music";
-    }).catch(() => {
-      alert("Tap again to play music (browser blocked autoplay).");
-    });
+    music.play();
+    musicBtn.textContent = "⏸ Pause music";
   } else {
     music.pause();
-    isPlaying = false;
     musicBtn.textContent = "▶ Play music";
   }
+  isPlaying = !isPlaying;
 }
 </script>
 
