Revise photographer bio and service offerings
Updated the photographer's introduction and services description for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -241,21 +241,32 @@ footer{
     <div class="about-card">
       <div class="about-bg">
         <div class="about-copy">
-          <p>Hello, I’m <strong>Viriel (“Yel”)</strong>, the photographer behind <strong>letsveereal</strong>.</p>
-          <p>
-            The name <em>letsveereal</em> reflects my approach to photography—capturing
-            <strong>honest moments</strong>, <strong>natural light</strong>, and images that feel <strong>genuine</strong>.
-          </p>
-          <p>
-            I shoot with an <strong>Olympus OM-D E-M10 Mark IV</strong> and professionally edit every photo in
-            <strong>Adobe Lightroom</strong>. Same-day instant prints are available.
-          </p>
-          <p>
-            I offer <strong>mini sessions</strong> and <strong>custom shoots</strong>, with a <strong>20% discount</strong>
-            for clients who assist with transportation.
-          </p>
-          <p><strong>Let’s veereal.</strong></p>
-        </div>
+  <p>Hello, I’m <strong>Viriel (“Yel”)</strong>, the photographer behind <strong>letsveereal photography</strong>.</p>
+
+  <p>
+    The name <em>letsveereal</em> is inspired by my own name, Viriel, and reflects my approach to photography—capturing
+    <strong>honest moments</strong>, <strong>natural light</strong>, and images that feel <strong>genuine</strong>.
+    My work focuses on <strong>authentic expressions</strong> and <em>clean, timeless visuals</em> that tell your story
+    in a meaningful way.
+  </p>
+
+  <p>
+    I shoot with an <strong>Olympus OM-D E-M10 Mark IV</strong> paired with carefully selected lenses, and every image is
+    professionally edited using <strong>Adobe Lightroom</strong> to ensure consistent <strong>color</strong>,
+    <strong>clarity</strong>, and <strong>quality</strong>. I also offer
+    <strong>same-day instant photo prints</strong>, allowing clients to leave their session with a physical memory
+    the very same day.
+  </p>
+
+  <p>
+    I provide <strong>mini sessions</strong> and <strong>custom shoots</strong> with flexible locations tailored to your needs.
+    For clients who can assist with <strong>transportation</strong> to their preferred location, a
+    <strong>20% discount</strong> is available—helping keep professional photography accessible while maintaining
+    high-quality results.
+  </p>
+
+  <p><strong>let’s veereal.</strong></p>
+</div>
       </div>
     </div>
   </div>
