Update header position and hero content padding
Changed header position to absolute and adjusted hero content padding.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@ body{
 
 /* HEADER */
 header{
-  position:sticky;
+  position:absolute;     /* overlays the hero */
   top:0;
+  left:0;
+  right:0;
   z-index:50;
 
-  /* transparent, but polished */
   background:linear-gradient(to bottom, rgba(0,0,0,.55), rgba(0,0,0,0));
   border-bottom:1px solid rgba(255,255,255,.10);
   backdrop-filter: blur(10px);
@@ -106,7 +107,7 @@ header{
 .hero-content{
   position:relative;
   z-index:2;
-  padding-top:90px;
+  padding-top:120px;
 }
 .hero h1{
   font-family:"Playfair Display",serif;
