--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@ body{
 
 /* HEADER */
 header{
-  position:absolute;     /* overlays the hero */
+  position:sticky;   /* stays sticky */
   top:0;
-  left:0;
-  right:0;
   z-index:50;
 
+  /* makes it overlay/feel blended on the hero */
+  margin-bottom:-70px;              /* pulls hero up under header */
+  padding:18px 0;
+
   background:linear-gradient(to bottom, rgba(0,0,0,.55), rgba(0,0,0,0));
-  border-bottom:1px solid rgba(255,255,255,.10);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+  border-bottom:1px solid rgba(255,255,255,.10);
 }
 
 .nav{
@@ -107,7 +109,7 @@ header{
 .hero-content{
   position:relative;
   z-index:2;
-  padding-top:120px;
+  padding-top:140px;
 }
 .hero h1{
   font-family:"Playfair Display",serif;
