--- a/index.html
+++ b/index.html
@@ -27,18 +27,14 @@ body{
 
 /* HEADER */
 header{
-  position:sticky;   /* stays sticky */
+  position:sticky;
   top:0;
   z-index:50;
 
-  /* makes it overlay/feel blended on the hero */
-  margin-bottom:-70px;              /* pulls hero up under header */
-  padding:18px 0;
-
-  background:linear-gradient(to bottom, rgba(0,0,0,.55), rgba(0,0,0,0));
+  background:rgba(0,0,0,.55);   /* clean, readable */
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  border-bottom:1px solid rgba(255,255,255,.10);
+  border-bottom:1px solid rgba(255,255,255,.12);
 }
 
 .nav{
@@ -109,7 +105,7 @@ header{
 .hero-content{
   position:relative;
   z-index:2;
-  padding-top:120px;
+  padding-top:80px;
 }
 .hero h1{
   font-family:"Playfair Display",serif;
