--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ header{
   flex-wrap:wrap;
 }
 
-/* BUTTONS (less “bubbly”) */
+/* BUTTONS */
 .btn{
   border-radius:12px;
   border:1px solid rgba(255,255,255,.16);
@@ -285,7 +285,6 @@ section{padding:78px 0}
 .gallery::-webkit-scrollbar{height:10px}
 .gallery::-webkit-scrollbar-thumb{background:rgba(255,255,255,.16);border-radius:999px}
 .gallery::-webkit-scrollbar-track{background:rgba(255,255,255,.06);border-radius:999px}
-
 .gallery figure{
   margin:0;
   position:relative;
@@ -377,7 +376,7 @@ footer small{display:block; color:var(--muted); margin-top:10px}
 .fab:hover{opacity:.96}
 .fab:active{transform:translateY(1px)}
 
-/* MODAL (gallery lightbox) */
+/* MODAL */
 .modal{
   position:fixed;
   inset:0;
@@ -414,11 +413,7 @@ footer small{display:block; color:var(--muted); margin-top:10px}
   cursor:pointer;
   font-weight:900;
 }
-.modal img{
-  width:100%;
-  height:auto;
-  display:block;
-}
+.modal img{width:100%;height:auto;display:block}
 
 /* MOBILE */
 @media (max-width:980px){
@@ -481,9 +476,6 @@ footer small{display:block; color:var(--muted); margin-top:10px}
             <li><span class="dot"></span><span>Fast turnaround with consistent color + clarity</span></li>
             <li><span class="dot"></span><span>Ask about the 20% transportation discount</span></li>
           </ul>
-          <div style="margin-top:14px; display:flex; gap:10px; flex-wrap:wrap;">
-            <button class="btn ghost" onclick="copyNumber()">Copy number</button>
-          </div>
           <p class="note">Booking is quickest by text. I’ll reply with available times and location options.</p>
         </aside>
       </div>
@@ -499,7 +491,7 @@ footer small{display:block; color:var(--muted); margin-top:10px}
         </div>
       </div>
 
-      <!-- DO NOT CHANGE DESCRIPTION (content preserved) -->
+      <!-- DO NOT CHANGE DESCRIPTION -->
       <div class="about-wrap">
         <div class="about-bg">
           <div class="about-copy">
@@ -694,7 +686,7 @@ function openLightbox(img){
   modalImg.alt = img.alt || "Preview";
   modal.classList.add("open");
 }
-function closeLightbox(e){
+function closeLightbox(){
   const modal = document.getElementById("modal");
   if(!modal.classList.contains("open")) return;
   modal.classList.remove("open");
@@ -706,7 +698,7 @@ document.addEventListener("keydown", (e)=>{
   if(e.key === "Escape") closeLightbox();
 });
 
-/* Tiny toast (minimal, not bubbly) */
+/* Tiny toast */
 let toastTimer;
 function toast(msg){
   clearTimeout(toastTimer);
