--- a/index.html
+++ b/index.html
@@ -14,20 +14,25 @@
   --muted:rgba(255,255,255,.72);
   --border2:rgba(255,255,255,.10);
   --radius:18px;
+  --shadow:0 18px 60px rgba(0,0,0,.55);
+  --shadow2:0 10px 28px rgba(0,0,0,.45);
 }
 
 *{box-sizing:border-box}
 html{scroll-behavior:smooth}
 body{
   margin:0;
-  background:#070707;
+  background:radial-gradient(1200px 800px at 20% -10%, rgba(255,255,255,.06), transparent 55%),
+             radial-gradient(900px 700px at 80% 0%, rgba(255,255,255,.04), transparent 55%),
+             var(--bg);
   color:var(--text);
   font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;
   line-height:1.6;
 }
+a{color:inherit}
 .container{max-width:1120px;margin:0 auto;padding:0 22px}
 
-/* Header */
+/* HEADER */
 header{
   position:sticky;
   top:0;
@@ -47,15 +52,20 @@ header{
   align-items:baseline;
   gap:10px;
   text-decoration:none;
-  color:white;
 }
 .brand .logo{
   font-family:"Playfair Display",serif;
   font-size:20px;
   text-transform:lowercase;
 }
+.brand .tag{
+  font-size:13px;
+  color:var(--muted);
+  border-left:1px solid rgba(255,255,255,.14);
+  padding-left:10px;
+}
 
-/* Hamburger button */
+/* HAMBURGER */
 .hamburger{
   font-size:22px;
   background:none;
@@ -66,7 +76,7 @@ header{
   cursor:pointer;
 }
 
-/* Slide-out menu */
+/* MOBILE MENU */
 .mobile-menu{
   position:fixed;
   top:0;
@@ -76,22 +86,21 @@ header{
   background:rgba(10,10,10,.95);
   backdrop-filter:blur(16px);
   border-left:1px solid rgba(255,255,255,.12);
-  padding:80px 20px;
+  padding:70px 20px;
   display:flex;
   flex-direction:column;
   gap:14px;
   transition:right .25s ease;
   z-index:999;
 }
-.mobile-menu.open{ right:0; }
-
+.mobile-menu.open{right:0;}
 .mobile-menu button{
   background:rgba(255,255,255,.06);
   border:1px solid rgba(255,255,255,.16);
   color:white;
   padding:12px;
   border-radius:12px;
-  font-weight:700;
+  font-weight:800;
   cursor:pointer;
 }
 .mobile-menu button.primary{
@@ -99,89 +108,108 @@ header{
   color:black;
 }
 
-/* Hero section */
-.hero{
-  min-height:90vh;
-  position:relative;
-  display:flex;
-  align-items:center;
-}
-.hero::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:
-    linear-gradient(180deg,rgba(0,0,0,.75),rgba(0,0,0,.85)),
-    url("assets/img/hero.jpg") center/cover no-repeat;
-}
-.hero-content{
-  position:relative;
-  padding:80px 0;
-}
-.hero h1{
-  font-family:"Playfair Display",serif;
-  font-size:clamp(44px,6vw,72px);
-  margin:0;
-}
-.hero p{color:var(--muted);max-width:60ch}
-
-/* Buttons */
+/* BUTTONS */
 .btn{
   border-radius:12px;
   border:1px solid rgba(255,255,255,.16);
   padding:10px 14px;
-  font-weight:700;
+  font-weight:800;
   cursor:pointer;
 }
-.btn.primary{background:white;color:black;}
-.btn.ghost{background:rgba(255,255,255,.06);color:white;}
-.hero-actions{margin-top:18px;display:flex;gap:12px}
+.btn.primary{background:#fff;color:#111;}
+.btn.ghost{background:rgba(255,255,255,.06);color:#fff;}
+.btn.small{padding:9px 12px;font-size:14px}
 
-/* Sections */
-section{padding:80px 0;border-bottom:1px solid rgba(255,255,255,.08);}
-.section-title{
-  font-family:"Playfair Display",serif;
-  font-size:36px;
-  margin-bottom:12px;
+/* HERO */
+.hero{min-height:92vh;position:relative;overflow:hidden;border-bottom:1px solid rgba(255,255,255,.08);}
+.hero::before{
+  content:"";
+  position:absolute;
+  inset:-20px;
+  background:
+    radial-gradient(700px 500px at 25% 25%, rgba(255,255,255,.10), transparent 60%),
+    linear-gradient(180deg,rgba(0,0,0,.72),rgba(0,0,0,.25),rgba(0,0,0,.86)),
+    url("assets/img/hero.jpg") center/cover no-repeat;
 }
-.section-sub{color:var(--muted);margin-bottom:30px}
+.hero-content{position:relative;z-index:2;padding:82px 0 40px;}
+.hero-grid{display:grid;grid-template-columns:1.2fr .8fr;gap:22px;}
+.hero h1{font-family:"Playfair Display",serif;font-size:clamp(44px,6vw,72px);margin:0;}
+.hero p{color:var(--muted);max-width:60ch;}
+.hero-actions{margin-top:18px;display:flex;gap:12px;flex-wrap:wrap;}
+.hero-meta{margin-top:16px;color:var(--muted);font-size:14px;}
 
-/* Services grid */
-.services-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:22px;
-}
-.service-card{
-  background:rgba(255,255,255,.05);
-  border:1px solid rgba(255,255,255,.12);
-  padding:20px;
-  border-radius:16px;
-}
-.service-card h3{margin-top:0}
+/* INFO CARD */
+.info-card{border:1px solid var(--border2);border-radius:16px;background:rgba(10,10,10,.55);padding:16px;}
+.price{font-weight:900;font-size:16px;}
+.quick-list{margin:12px 0 0;padding:0;list-style:none;display:grid;gap:8px;color:rgba(255,255,255,.80);font-size:14px;}
+.quick-list li{display:flex;gap:10px;}
+.dot{width:8px;height:8px;background:rgba(255,255,255,.55);border-radius:2px;margin-top:6px;}
 
-/* Footer */
-footer{
-  padding:40px;
-  text-align:center;
-  color:var(--muted);
+/* SECTIONS */
+section{padding:78px 0}
+.section-title{font-family:"Playfair Display",serif;font-size:30px;margin:0;}
+.section-sub{color:var(--muted);}
+
+/* ABOUT (UNCHANGED) */
+.about-wrap{max-width:980px;margin:0 auto;border:1px solid var(--border2);border-radius:18px;overflow:hidden;}
+.about-bg{
+  padding:40px 28px;
+  background:linear-gradient(180deg,rgba(0,0,0,.78),rgba(0,0,0,.42),rgba(0,0,0,.86)),
+  url("assets/img/bg-image.jpg") center/cover no-repeat;
+}
+.about-copy{max-width:78ch;margin:0 auto;text-align:center;color:rgba(255,255,255,.84);}
+.about-copy strong{color:#fff}
+.about-copy em{font-family:"Playfair Display",serif;color:#fff;}
+
+/* SERVICES */
+.services-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:18px;}
+.service{padding:18px;border:1px solid var(--border2);border-radius:16px;}
+.service p{color:var(--muted);font-size:14px;}
+
+/* GALLERY */
+.gallery{display:flex;gap:14px;overflow-x:auto;}
+.gallery img{width:520px;height:320px;object-fit:cover;border-radius:16px;border:1px solid var(--border2);cursor:pointer;}
+
+/* CONTACT */
+.contact{max-width:980px;margin:0 auto;border:1px solid var(--border2);border-radius:18px;padding:22px;}
+.contact-grid{display:grid;grid-template-columns:1.1fr .9fr;gap:18px;}
+.kv div{display:flex;justify-content:space-between;border:1px solid rgba(255,255,255,.10);padding:10px;border-radius:14px;}
+
+/* FOOTER */
+footer{text-align:center;padding:40px;border-top:1px solid rgba(255,255,255,.10);}
+
+/* FLOATING BUTTON */
+.fab{position:fixed;bottom:18px;right:18px;background:#fff;color:#111;padding:12px 14px;border-radius:14px;border:0;font-weight:900;cursor:pointer;}
+
+/* LIGHTBOX */
+.modal{position:fixed;inset:0;display:none;place-items:center;background:rgba(0,0,0,.72);z-index:1000;}
+.modal.open{display:grid;}
+.modal-card{background:black;border-radius:18px;overflow:hidden;}
+.modal img{width:100%;}
+
+/* RESPONSIVE */
+@media(max-width:900px){
+  .hero-grid{grid-template-columns:1fr;}
+  .contact-grid{grid-template-columns:1fr;}
 }
 </style>
 </head>
 
 <body>
 
+<!-- HEADER -->
 <header>
   <div class="container nav">
     <a class="brand" href="#top">
       <span class="logo">letsveereal</span>
+      <span class="tag">Natural moments, captured honestly.</span>
     </a>
 
     <button class="hamburger" onclick="toggleMenu()">☰</button>
   </div>
 </header>
 
-<!-- Navigation panel -->
+<!-- MOBILE MENU -->
 <div class="mobile-menu" id="mobileMenu">
   <button onclick="scrollToId('services'); toggleMenu()">Services</button>
   <button onclick="scrollToId('proof'); toggleMenu()">Gallery</button>
@@ -191,111 +219,127 @@ footer{
 
 <main id="top">
 
-<!-- Hero -->
+<!-- HERO -->
 <section class="hero">
   <div class="container hero-content">
-    <h1>Let’s be real.</h1>
-    <p><strong>Natural moments, captured honestly.</strong> Clean edits, natural light, and photos that feel like you.</p>
+    <div class="hero-grid">
+      <div>
+        <h1>Let’s be real.</h1>
+        <p><strong>Natural moments, captured honestly.</strong></p>
 
-    <div class="hero-actions">
-      <button class="btn primary" onclick="textToBook()">Text to book</button>
-      <button class="btn ghost" onclick="scrollToId('proof')">View work</button>
+        <div class="hero-actions">
+          <button class="btn primary" onclick="textToBook()">Text to book</button>
+          <button class="btn ghost" onclick="scrollToId('proof')">View work</button>
+        </div>
+
+        <div class="hero-meta">Available Monday–Friday • Dover, DE</div>
+      </div>
+
+      <aside class="info-card">
+        <div class="price">$50 · 1-hour session</div>
+        <ul class="quick-list">
+          <li><span class="dot"></span>Flexible locations</li>
+          <li><span class="dot"></span>Fast turnaround</li>
+          <li><span class="dot"></span>Transportation discount</li>
+        </ul>
+      </aside>
     </div>
   </div>
 </section>
 
-<!-- About section -->
-<section aria-label="Behind the lens">
-  <div class="container">
-    <h2 class="section-title">Behind The Lens</h2>
-    <p class="section-sub">A little about the person behind the camera.</p>
+<!-- ABOUT (UNCHANGED TEXT) -->
+<section>
+<div class="container">
+<div class="about-wrap">
+<div class="about-bg">
+<div class="about-copy">
+<p>Hello, I’m <strong>Viriel (“Yel”)</strong>, the photographer behind <strong>letsveereal photography</strong>.</p>
 
-    <p>Hello, I’m <strong>Viriel (“Yel”)</strong>, the photographer behind <strong>letsveereal photography</strong>.</p>
+<p>
+The name <em>letsveereal</em> is inspired by my own name, Viriel, and reflects my approach to photography—capturing
+<strong>honest moments</strong>, <strong>natural light</strong>, and images that feel <strong>genuine</strong>.
+My work focuses on <strong>authentic expressions</strong> and <em>clean, timeless visuals</em> that tell your story
+in a meaningful way.
+</p>
 
-    <p>
-      The name <em>letsveereal</em> is inspired by my own name, Viriel, and reflects my approach to photography—capturing
-      <strong>honest moments</strong>, <strong>natural light</strong>, and images that feel <strong>genuine</strong>.
-      My work focuses on <strong>authentic expressions</strong> and <em>clean, timeless visuals</em> that tell your story
-      in a meaningful way.
-    </p>
+<p>
+I shoot with an <strong>Olympus OM-D E-M10 Mark IV</strong> paired with carefully selected lenses, and every image is
+professionally edited using <strong>Adobe Lightroom</strong>.
+</p>
 
-    <p>
-      I shoot with an <strong>Olympus OM-D E-M10 Mark IV</strong> paired with carefully selected lenses, and every image is
-      professionally edited using <strong>Adobe Lightroom</strong> to ensure consistent <strong>color</strong>,
-      <strong>clarity</strong>, and <strong>quality</strong>. I also offer
-      <strong>same-day instant photo prints</strong>, allowing clients to leave their session with a physical memory
-      the very same day.
-    </p>
+<p>
+I provide <strong>mini sessions</strong> and <strong>custom shoots</strong> with flexible locations tailored to your needs.
+</p>
 
-    <p>
-      I provide <strong>mini sessions</strong> and <strong>custom shoots</strong> with flexible locations tailored to your needs.
-      For clients who can assist with <strong>transportation</strong> to their preferred location, a
-      <strong>20% discount</strong> is available—helping keep professional photography accessible while maintaining
-      high-quality results.
-    </p>
-
-    <p><strong>let’s veereal.</strong></p>
-  </div>
+<p><strong>let’s veereal.</strong></p>
+</div>
+</div>
+</div>
+</div>
 </section>
 
-<!-- Services section -->
+<!-- SERVICES -->
 <section id="services">
-  <div class="container">
-    <h2 class="section-title">Services</h2>
-    <p class="section-sub">Flexible photography sessions designed around your needs.</p>
-
-    <div class="services-grid">
-      <div class="service-card">
-        <h3>Mini Sessions</h3>
-        <p>Short and affordable sessions perfect for portraits, social media, or quick shoots.</p>
-      </div>
-
-      <div class="service-card">
-        <h3>Custom Photo Shoots</h3>
-        <p>Personalized shoots at your preferred location with tailored lighting and editing.</p>
-      </div>
-
-      <div class="service-card">
-        <h3>Same-Day Prints</h3>
-        <p>Instant physical photo prints available right after your session.</p>
-      </div>
-
-      <div class="service-card">
-        <h3>Transportation Discount</h3>
-        <p>Clients who provide transportation to the location receive a 20% discount.</p>
-      </div>
-    </div>
-  </div>
+<div class="container">
+<h2 class="section-title">Services</h2>
+<div class="services-grid">
+<div class="service"><h3>Portraits</h3><p>Natural individual sessions.</p></div>
+<div class="service"><h3>Family & Couples</h3><p>Authentic moments.</p></div>
+<div class="service"><h3>Creative / Brand</h3><p>Modern content visuals.</p></div>
+</div>
+</div>
 </section>
 
-<!-- Gallery -->
+<!-- GALLERY -->
 <section id="proof">
-  <div class="container">
-    <h2 class="section-title">Gallery</h2>
-    <p class="section-sub">A selection of recent work.</p>
-  </div>
+<div class="container">
+<h2 class="section-title">Latest Gallery</h2>
+<div class="gallery" id="gallery">
+<img src="assets/img/proof-01.jpg" onclick="openLightbox(this)">
+<img src="assets/img/proof-02.jpg" onclick="openLightbox(this)">
+<img src="assets/img/proof-03.jpg" onclick="openLightbox(this)">
+</div>
+</div>
 </section>
 
-<!-- Contact -->
+<!-- CONTACT -->
 <section id="contact">
-  <div class="container">
-    <h2 class="section-title">Contact</h2>
-    <p class="section-sub">Let’s plan your shoot.</p>
-    <button class="btn primary" onclick="textToBook()">Text to book</button>
-  </div>
+<div class="container">
+<h2 class="section-title">Contact</h2>
+<div class="contact">
+<div class="contact-grid">
+<div>
+<button class="btn primary" onclick="textToBook()">Text 302-260-1994</button>
+</div>
+<div class="kv">
+<div><span>Location</span><strong>Dover, DE</strong></div>
+<div><span>Hours</span><strong>Mon–Fri 9–5</strong></div>
+</div>
+</div>
+</div>
+</div>
 </section>
 
 </main>
 
 <footer>
-  © <span id="year"></span> letsveereal photography
+<p>© <span id="year"></span> letsveereal photography</p>
 </footer>
 
+<button class="fab" onclick="textToBook()">Text to book</button>
+
+<!-- LIGHTBOX -->
+<div class="modal" id="modal" onclick="closeLightbox()">
+  <div class="modal-card">
+    <img id="modalImg">
+  </div>
+</div>
+
 <script>
-const PHONE = "3022601994";
+const PHONE="3022601994";
 
 function textToBook(){
-  window.location.href = "sms:" + PHONE;
+  window.location.href="sms:"+PHONE;
 }
 
 function scrollToId(id){
@@ -306,7 +350,16 @@ function toggleMenu(){
   document.getElementById("mobileMenu").classList.toggle("open");
 }
 
-document.getElementById("year").textContent = new Date().getFullYear();
+function openLightbox(img){
+  document.getElementById("modalImg").src=img.src;
+  document.getElementById("modal").classList.add("open");
+}
+
+function closeLightbox(){
+  document.getElementById("modal").classList.remove("open");
+}
+
+document.getElementById("year").textContent=new Date().getFullYear();
 </script>
 
 </body>
